Update WaterGenerator.java